--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -1,9 +1,11 @@
 .services {
     display: flex;
-    position: absolute;
-    top: 350px;
+    position: relative;
+    // top: 350px;
     width: 100%;
-    background-color: aquamarine;
+    height: 600px;
+    background-color: rgb(0, 90, 60);
+    color: #f0f0f0;
     .services-list {
       width: 50%;
       ul {
