--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -3,20 +3,30 @@
     position: relative;
     // top: 350px;
     width: 100%;
-    height: 600px;
-    background-color: rgb(0, 90, 60);
+    height: 740px;
+    background-color: rgb(0, 22, 15);
     color: #f0f0f0;
     .services-list {
+      padding-left: 20px;
       width: 50%;
+      display: flex;
+      // justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      .title{
+        margin-top: 150px;
+        padding: 10px;
+        width: 400px;
+      }
       ul {
         list-style: none;
         padding: 0;
         li {
           padding: 10px;
           font-size: 1.5rem;
-          cursor: pointer;
+          color: #8f8f8f;
           &:hover {
-            background-color: #f0f0f0;
+            color: #f0f0f0;
           }
         }
       }
