--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -1,42 +1,50 @@
 .services {
     display: flex;
+    flex-direction: column;
     position: relative;
     // top: 350px;
     width: 100%;
-    height: 740px;
+    height: 120vh;
     background-color: rgb(0, 22, 15);
     color: #f0f0f0;
-    .services-list {
-      padding-left: 20px;
-      width: 50%;
+    .title{
+      text-align: center;
+      padding: 10px;
+      font-size: 30px;
+      margin: 50px;
+      // width: 400px;
+    }
+    .content{
       display: flex;
-      // justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      .title{
-        margin-top: 150px;
-        padding: 10px;
-        width: 400px;
-      }
-      ul {
-        list-style: none;
-        padding: 0;
-        li {
-          padding: 10px;
-          font-size: 1.5rem;
-          color: #8f8f8f;
-          &:hover {
-            color: #f0f0f0;
+      .services-list {
+        padding-left: 20px;
+        width: 50%;
+        display: flex;
+        // justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        ul {
+          list-style: none;
+          padding: 0;
+          li {
+            padding: 25px;
+            font-size: 1.5rem;
+            color: #8f8f8f;
+            &:hover {
+              color: #f0f0f0;
+            }
           }
         }
       }
-    }
-    .service-image {
-      width: 50%;
-      display: flex;
-      img {
-        width: 100%;
-        height: auto;
+      .service-image {
+        width: 50%;
+        // height: 400px;
+        display: flex;
+        justify-content: center;
+        img {
+          width: 60vh;
+          height: 65vh;
+        }
       }
     }
   }
