Add a box message

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,8 @@
 $screen-small: 600px;
 $screen-medium: 1024px;
 $screen-large: 1200px;
+
+// Colors
+$dark-background: rgb(0, 22, 15);
+$light-background: rgb(154, 244, 216);
+$text-dark: rgb(42, 42, 42);
