--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -4,7 +4,7 @@
     position: relative;
     // top: 350px;
     width: 100%;
-    height: 120vh;
+    height: 50rem;
     background-color: rgb(0, 22, 15);
     color: #f0f0f0;
     .title{
@@ -42,8 +42,8 @@
         display: flex;
         justify-content: center;
         img {
-          width: 60vh;
-          height: 65vh;
+          width: 30rem;
+          height: 30rem;
         }
       }
     }
