--- a/src/styles/BoxMessage.scss
+++ b/src/styles/BoxMessage.scss
@@ -15,9 +15,10 @@
         background-color: $light-background;
         width: 70%;
         height: 30%;
-        color: $text-dark;
+        color: $text-light;
         font-size: 30px;
         text-align: center;
+        font-weight: 700;
         // vertical-align: middle;
     }
 }
