--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,6 @@ $screen-large: 1200px;
 
 // Colors
 $dark-background: rgb(0, 22, 15);
-$light-background: rgb(154, 244, 216);
+$light-background: #ffc400;
 $text-dark: rgb(42, 42, 42);
+$text-light: white;
