--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 .services {
     display: flex;
     flex-direction: column;
@@ -31,7 +33,7 @@
             font-size: 1.5rem;
             color: #8f8f8f;
             &:hover {
-              color: #f0f0f0;
+              color: $light-background;
             }
           }
         }
