--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,17 @@
   width: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+body, html{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 body{
   background-color: rgb(0, 65, 12);
   margin: 0px;
