--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -44,8 +44,9 @@
         display: flex;
         justify-content: center;
         img {
-          width: 30rem;
-          height: 30rem;
+          max-width: 100%;
+          height: 100%;
+          object-fit: none;
         }
       }
     }
