--- a/src/styles/Timeline.scss
+++ b/src/styles/Timeline.scss
@@ -15,36 +15,37 @@
         margin: 20px 0;
         padding-left: 80px;
 
-        &::before{
-            content: '';
-            position: absolute;
-            left: 45px;
-            top: 0;
-            bottom: 0;
-            width: 2px;
-            background-color: #ccc;
-        }
+        // &::before{
+        //     content: '';
+        //     position: absolute;
+        //     left: 45px;
+        //     top: 0;
+        //     bottom: 0;
+        //     width: 2px;
+        //     background-color: #ccc;
+        // }
+
         .timeline-item {
           position: relative;
           margin-bottom: 20px;
 
-          &::before {
-            content: '\2713';
-            background: #fff;
-            display: inline-block;
-            position: absolute;
-            border-radius: 50%;
-            border: 0;
-            left: -60px;
-            width: 50px;
-            height: 50px;
-            z-index: 400;
-            text-align: center;
-            line-height: 50px;
-            color: #d4d9df;
-            font-size: 24px;
-            border: 2px solid #d4d9df;
-          }
+          // &::before {
+          //   content: '\2713';
+          //   background: #fff;
+          //   display: inline-block;
+          //   position: absolute;
+          //   border-radius: 50%;
+          //   border: 0;
+          //   left: -60px;
+          //   width: 50px;
+          //   height: 50px;
+          //   z-index: 400;
+          //   text-align: center;
+          //   line-height: 50px;
+          //   color: #d4d9df;
+          //   font-size: 24px;
+          //   border: 2px solid #d4d9df;
+          // }
           &.active{
             &::before{
                 content: '\2713';
@@ -64,6 +65,7 @@
                 border: 2px solid #28a745;
             }
           }
+
 
           .timeline-content {
             padding: 10px;
