--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -6,7 +6,6 @@
     position: relative;
     // top: 350px;
     width: 100%;
-    height: 50rem;
     background-color: rgb(0, 22, 15);
     color: #f0f0f0;
     .title{
@@ -22,7 +21,6 @@
         padding-left: 20px;
         width: 50%;
         display: flex;
-        // justify-content: center;
         flex-direction: column;
         align-items: center;
         ul {
@@ -46,6 +44,28 @@
           max-width: 100%;
           height: 100%;
           object-fit: none;
+        }
+      }
+      .services-mobile{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .service-item{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+
+          font-size: 1.5rem;
+          color: #8f8f8f;
+
+          img {
+            margin-top: 10px;
+            width: 80%;
+            height: auto;
+            max-width: 400px;
+          }
         }
       }
     }
