--- a/src/styles/BoxMessage.scss
+++ b/src/styles/BoxMessage.scss
@@ -16,13 +16,13 @@
         color: $text-light;
         text-align: center;
         font-weight: 700;
-        @media (min-width: $screen-large) {
+        @media (min-width: $screen-small) {
             width: 70%;
             height: 30%;
             font-size: 30px;
         }
 
-        @media (max-width: $screen-large){
+        @media (max-width: $screen-small){
             width: 100%;
             height: 30%;
             font-size: 25px;
