--- a/src/styles/Questions.scss
+++ b/src/styles/Questions.scss
@@ -3,5 +3,8 @@
 
 }
 .FaqContainer_Header{
+    padding-top: 5rem;
+    font-size: 30px;
+    padding-bottom: 3rem;
     color: rgb(232, 255, 234);
 }
